examples/test/testpolicy13629.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13629
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key22: value42
      key42: value40
      key7: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value21
      podSelector:
        matchLabels:
          key47: value26
          key13: value37
